# prospecting-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
prospect_agent/: __main__.py  config.py  main.py  models.py
prospect_agent/classify/: vertical_classifier.py
prospect_agent/crawl/: crawler.py  parser.py  robots.py
prospect_agent/dashboard/: app.py
prospect_agent/discovery/: discovery_runner.py  query_builder.py
prospect_agent/enrich/: email_extractor.py  lead_scorer.py  platform_detector.py  signal_extractor.py
prospect_agent/exports/: csv_exporter.py
prospect_agent/providers/: common_crawl.py  directory.py  places.py  search.py  website_crawl.py
prospect_agent/storage/: google_sheets.py
prospect_agent/tests/: test_core.py
